変数とかの命名規則を追加
