# apps/server/src/apis/auth/entities/login.entity.ts
@@ -2,8 +2,8 @@ import { ApiProperty } from "@nestjs/swagger";
 
 export class LoginEntity {
   constructor(data: LoginEntity) {
-    this.access_token = data.access_token;
+    this.accessToken = data.accessToken;
   }
   @ApiProperty()
-  access_token: string;
+  accessToken: string;
 }
